@@ -1,11 +1,13 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<form string="Write-Off">
-    <label name="journal"/>
-    <field name="journal"/>
+<form string="Write-Off" cursor="journal">
+    <label name="amount"/>
+    <field name="amount"/>
     <label name="date"/>
     <field name="date"/>
+    <label name="journal"/>
+    <field name="journal"/>
     <label name="account"/>
     <field name="account"/>
 </form>
